Pushing fix for mkdocs.yml introduced
Signed-off-by: Mary Anthony <mary@docker.com>
(cherry picked from commit d5c0300986cb589d6e1618546a4bf46ed4ddac7e)

Conflicts:
	docs/mkdocs.yml

Updating configuration with required header

Signed-off-by: Mary Anthony <mary@docker.com>
(cherry picked from commit 8ae13b4725b466bca256fa51cd2b7a141b0473ab)

Updating env var documentation

The position was a bit too early. Fleshed out the example.
Also, using the _ underscore for emphasis was confusing because it is also used to indicate
a level change.

Signed-off-by: Mary Anthony <mary@docker.com>
(cherry picked from commit 5043bdbc93c0b9f25759810e9c9b63015efa3113)

Fixing headings

Signed-off-by: Mary Anthony <mary@docker.com>
(cherry picked from commit 7c93c8c265fe7cf1c59f857d7049c39902e854a0)

Fixes Issue #471 with Publish

- Add sed to Dockerfile; this sed exists on publish script; breaks headings/nav in files without metadata
- Ensure sed runs over storage-driver/ subdir
- Add metadata to all the files (including specs) that don't have it; this ensures they display correctly on publish
- Implement the fix for the showing up in Github
- Update template with GITHUB IGNORES

Signed-off-by: Mary Anthony <mary@docker.com>
(cherry picked from commit 68c0682e0005193a83303125441eea1cb042bb4c)

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -7,11 +7,13 @@ COPY . /src
 # Reset the /docs dir so we can replace the theme meta with the new repo's git info
 RUN git reset --hard
 
+RUN grep "VERSION =" /src/version/version.go  | sed 's/.*"\(.*\)".*/\1/' > /docs/VERSION
+
+
 #
 # RUN git describe --match 'v[0-9]*' --dirty='.m' --always > /docs/VERSION
 # The above line causes a floating point error in our tools
 #
-RUN grep "VERSION =" /src/version/version.go  | sed 's/.*"\(.*\)".*/\1/' > /docs/VERSION
 COPY docs/* /docs/sources/registry/
 COPY docs/images/* /docs/sources/registry/images/
 COPY docs/spec/* /docs/sources/registry/spec/
@@ -19,6 +21,17 @@ COPY docs/spec/auth/* /docs/sources/registry/spec/auth/
 COPY docs/storage-drivers/* /docs/sources/registry/storage-drivers/
 COPY docs/mkdocs.yml /docs/mkdocs-distribution.yml
 
+RUN sed -i.old '1s;^;no_version_dropdown: true;' \
+  /docs/sources/registry/*.md \
+  /docs/sources/registry/spec/*.md \
+  /docs/sources/registry/spec/auth/*.md \
+  /docs/sources/registry/storage-drivers/*.md 
+
+RUN sed -i.old  -e '/^<!--GITHUB/g' -e '/^IGNORES-->/g'\
+  /docs/sources/registry/*.md \
+  /docs/sources/registry/spec/*.md \
+  /docs/sources/registry/spec/auth/*.md \
+  /docs/sources/registry/storage-drivers/*.md 
 
 # Then build everything together, ready for mkdocs
 RUN /docs/build.sh
